# Proyecto_II_Datos_II

./: .gitignore  Bp.txt  CMakeLists.txt  dconfig  main.cpp  src\Bp.txt
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
html/: Backtracking_8cpp.html  Backtracking_8cpp_source.html  Backtracking_8h.html  Backtracking_8h_source.html  Client_8h.html  Client_8h_source.html  Genetic_8cpp.html  Genetic_8cpp_source.html  PathfindingAStar_8cpp.html  PathfindingAStar_8cpp_source.html  PathfindingAStar_8h.html  PathfindingAStar_8h_source.html  Server_8h.html  Server_8h_source.html  StarNode_8cpp.html  StarNode_8cpp_source.html  StarNode_8h.html  StarNode_8h_source.html  annotated.html  classBacktracking-members.html  classBacktracking.html  classClient-members.html  classClient.html  classPathfindingAStar-members.html  classPathfindingAStar.html  classServer-members.html  classServer.html  classStarNode-members.html  classStarNode.html  classes.html  dir_05a4c8a78c1a347d5956c998867b232e.html  dir_2a1242de1cd42a4cf36db1baf217af67.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_702e31a54e731c8683a2a2cadbb07bbb.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  (+10 more)
latex/: Backtracking_8cpp.tex  Backtracking_8h.tex  Client_8h.tex  Genetic_8cpp.tex  PathfindingAStar_8cpp.tex  PathfindingAStar_8h.tex  Server_8h.tex  StarNode_8cpp.tex  StarNode_8h.tex  annotated.tex  classBacktracking.tex  classClient.tex  classPathfindingAStar.tex  classServer.tex  classStarNode.tex  files.tex  refman.tex  (+7 more)
(+95 files in other folders)
